<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:scrollbars="vertical"
        android:background="@drawable/fond_blanc_arrondi"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/prenom"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- prénom -->
            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:layout_weight="1"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:textStyle="bold"
                android:text="@string/nom"/>
            <!-- nom -->
            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:textStyle="bold"
                android:text="@string/email"/>
            <!-- email -->
            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/eco"/>
            <!-- eco coin -->
            <TextView
                android:id="@+id/ecoin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            />

        <!-- équipements ménagers -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equipement"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/bleu_fonce_palette"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine"
            android:textColor="@color/bleu_fonce_palette"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/fer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repasser"
            android:textColor="@color/bleu_fonce_palette"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/clim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clim"
            android:textColor="@color/bleu_fonce_palette"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/aspi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aspi"
            android:textColor="@color/bleu_fonce_palette"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginBottom="8dp"/>

        <!-- Boutons de Sauvegarde et Annulation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/modifbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/modifier"
                android:backgroundTint="@color/bleu_palette"/>

            <Button
                android:id="@+id/enregbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enregistrer"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/cairo_bold"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/orange_palette"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
