<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="@drawable/fond_blanc_arrondi"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/langue"
            android:textStyle="bold"
            android:textColor="@color/bleu_fonce_palette"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="start"/>

        <RadioGroup
            android:id="@+id/langue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/en"
                android:paddingHorizontal="10dp"
                />

            <RadioButton
                android:id="@+id/fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/fr"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:paddingHorizontal="10dp"
                />

            <RadioButton
                android:id="@+id/es"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/es"
                android:textColor="@color/bleu_fonce_palette"
                android:fontFamily="@font/cairo_bold"
                android:paddingHorizontal="10dp"
                />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>