<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".MotDePasseOublieActivity"
    android:background="@drawable/fond_logs"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/mdpoublie2"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/bleu_fonce_palette"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80">

        <RelativeLayout
            android:id="@+id/form_mdp_oublie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/fond_beige_palette_90pt"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/text_changer_mdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/cairo_bold"
                android:layout_marginTop="40dp"

                android:text="@string/change_your_password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/bleu_fonce_palette"
                />

            <LinearLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_changer_mdp"
                android:orientation="horizontal"
                android:paddingVertical="20dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/mail" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/cairo_bold"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_nouveau_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_email"
                android:orientation="horizontal"
                android:paddingVertical="20dp"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/cadena" />

                <EditText
                    android:id="@+id/nouveaumdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nouveaumdp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/cairo_bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_nouveau_mdp_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_nouveau_mdp"
                android:orientation="horizontal"
                android:paddingVertical="20dp"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/check" />

                <EditText
                    android:id="@+id/confirmemdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmationmdp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/cairo_bold"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/form_mdp_oublie"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="30dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnmdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_bleu_palette"
                android:fontFamily="@font/cairo_bold"
                android:paddingVertical="20dp"

                android:text="@string/resetmdp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"

                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/retour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnmdp"
                android:background="@drawable/btn_marron_palette"

                android:layout_marginTop="20dp"
                android:paddingVertical="15dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>